# Crystallize

./: .gitignore  .travis.yml  Dockerfile  Gemfile  README.md  app.cfg.example  app.conf  app.rb  config.ru  deploy.sh  formalize.cabal  index.html  run.sh  server.sh  stack.yaml
app/: Main.hs  config.yml.example
app/Web/: Actions.hs  Config.hs  Server.hs  Types.hs
app/lib/: auth_helper.rb  printer.rb  validator.rb  writer.rb
app/public/: custom.js  main.css
app/views/: form.erb  pdf.erb
public/: main.css  messages_fi.js
script/: deploy  run  server  setup  slack_hook  test  update
spec/: app_spec_helper.rb  spec_helper.rb  test_data.rb
spec/app/: app_helpers.rb  public_spec.rb
spec/lib/: validator_spec.rb
src/: Main.hs
src/Formalize/: Actions.hs  Config.hs  Formalizer.hs  Html.hs  Pdf.hs  Server.hs  Types.hs  Util.hs  Validate.hs
src/Formalize/Internal/: Mailer.hs  Pdf.hs  Util.hs  Validate.hs
static/: form.html  pdf.html
test/Formalize/: ValidateSpec.hs
test/Web/: ServerSpec.hs
views/: form.erb
web/static/: 404.html  custom.js  main.css  messages_fi.js  pdf.css
web/view/: form.mustache  pdf.mustache
