name:                formalize
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/keveri/formalize#readme
license:             BSD3
license-file:        LICENSE
author:              Matias Keveri
copyright:           Matias Keveri
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable formalize
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:
    Formalize.Server,
    Formalize.Types,
    Formalize.Html,
    Formalize.Pdf,
    Formalize.Actions,
    Formalize.Util,
    Formalize.Validate,
    Formalize.Config
  default-language:    Haskell2010
  build-depends:
    base                  >= 4.7 && < 5,
    bytestring            >= 0.10,
    configurator          >= 0.3,
    containers            >= 0.5,
    filepath              >= 1.4,
    http-types            >= 0.8,
    hastache              >= 0.6,
    process               >= 1.2,
    Spock                 >= 0.9,
    syb                   >= 0.5,
    temporary             >= 1.2,
    text                  >= 1.2,
    time                  >= 1.5,
    transformers          >= 0.4,
    wai-extra             >= 3.0,
    wai-middleware-static >= 0.7
