name:                formalize
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/keveri/formalize#readme
license:             BSD3
license-file:        LICENSE
author:              Matias Keveri
copyright:           Matias Keveri
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:
      Formalize.Formalizer
    , Formalize.Html
    , Formalize.Types
  other-modules:
      Formalize.Pdf
    , Formalize.Util
    , Formalize.Validate
  build-depends:
      base >= 4.7 && < 5
    , bytestring >= 0.10
    , containers >= 0.5
    , filepath >= 1.4
    , hastache >= 0.6
    , process >= 1.2
    , temporary >= 1.2
    , text >= 1.2
    , time >= 1.5
    , transformers >= 0.4

executable formalize-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:
      Web.Actions
    , Web.Config
    , Web.Server
    , Web.Types
  build-depends:
      base
    , formalize
    , configurator >= 0.3
    , http-types >= 0.8
    , Spock >= 0.9
    , syb >= 0.5
    , text >= 1.2
    , transformers >= 0.4
    , wai-extra >= 3.0
    , wai-middleware-static >= 0.7

test-suite formalize-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , formalize
    , hspec
